fix(header.scss): fix the hero overlapping the header primary menu when toggled open

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -52,6 +52,7 @@
     }
 
     &__menu {
+        z-index: 999;
         background-color: var(--header-menu-bg);
 
         @media (max-width: 47.99em) {
